Remake Adv search to Table style + add logo for AS

--- a/search/advsearch.html
+++ b/search/advsearch.html
@@ -13,32 +13,42 @@
             <img class="center" src="GoogleImg.png">
         </div>
         <form action="https://google.com/search">
-            <div>
-                <div class="searchgroup">
-                    <div class="inline">
-                        <label class="labeladv" for="as_q">All these words: </label>
-                        <input class="searchlineadv" id="as_q" type="text" name="as_q">
-                    </div>
-                </div>
-                <div class="searchgroup">
-                    <div class="inline">
-                        <label class="labeladv" for="as_epq">This exact word or phrase:</label>
-                        <input class="searchlineadv" id="as_epq" type="text" name="as_epq">
-                    </div>
-                </div>
-                <div class="searchgroup">
-                    <div class="inline">
-                        <label class="labeladv" for="as_oq">Any of these words:</label>
-                        <input class="searchlineadv" id="as_oq" type="text" name="as_oq">
-                    </div>
-                </div>
-                <div class="searchgroup">
-                    <div class="inline">
-                        <label class="labeladv" style="width: 400px;" for="as_eq">None of these words:</label>
-                        <input class="searchlineadv" id="as_eq" type="text" name="as_eq">
-                    </div> 
-                </div>
-            </div>
+            <table id="advsrchinps">
+                <tbody>
+                    <tr>
+                        <td class="label">
+                            <label class="labeladv" for="as_q">All these words:</label>
+                        </td>
+                        <td class="advinput">
+                            <input class="searchlineadv" id="as_q" type="text" name="as_q">
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="label">
+                            <label class="labeladv" for="as_epq">This exact word or phrase:</label>
+                        </td>
+                        <td class="advinput">
+                            <input class="searchlineadv" id="as_epq" type="text" name="as_epq">
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="label">
+                            <label class="labeladv" for="as_oq">Any of these words:</label>
+                        </td>
+                        <td class="advinput">
+                            <input class="searchlineadv" id="as_oq" type="text" name="as_oq">
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="label">
+                            <label class="labeladv" style="width: 400px;" for="as_eq">None of these words:</label>
+                        </td>
+                        <td class="advinput">
+                            <input class="searchlineadv" id="as_eq" type="text" name="as_eq">
+                        </td> 
+                    </tr>
+                </tbody>
+            </table>
             <div class="center">
                 <div class="inline">
                     <input class="but" id="IS" type="submit" value="Advanced Search">
